Updated auth & swagger documentation
